--- a/src/styles/custom.css
+++ b/src/styles/custom.css
@@ -25,12 +25,12 @@ a svg,
 a svg path {
   transition: all 0.15s;
 }
-*,
+/* *,
 body {
   color: #fff;
-  /* font-size: 14px; */
+  font-size: 14px;
   line-height: normal;
-}
+} */
 body {
   background-color: #0d0d0d;
   min-height: 100dvh;
